# minesweeper

./: CMakeLists.txt
include/: logic.hpp  window.hpp
src/: logic.cpp
